--- a/PIXELink/Info.plist
+++ b/PIXELink/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app requires access to the photo library. </string>
+	<string>This app requires access to the photo library to find photos similar to the one you draw. </string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
